test/spec_vectors/simd_i32x4_cmp/fail/module_14.wat
(module (func $i32x4.ne-1st-arg-empty (result v128) (i32x4.ne (v128.const i32x4 0 0 0 0))))